--- a/app/src/main/res/layout/booking_confirmed_item_layout.xml
+++ b/app/src/main/res/layout/booking_confirmed_item_layout.xml
@@ -2,14 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="8dp">
+    android:layout_height="wrap_content">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/bookingCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp">
+        android:layout_margin="16dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackground">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -32,7 +34,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="8dp"
+                        android:ellipsize="end"
                         android:fontFamily="@font/lato_bold"
+                        android:maxLines="1"
                         android:text="Ref. No.:"
                         android:textColor="@color/textColor"
                         android:textSize="16sp" />
@@ -45,7 +49,7 @@
                         android:ellipsize="end"
                         android:fontFamily="@font/lato_bold"
                         android:maxLines="1"
-                        android:text="reference_number"
+                        android:text=""
                         android:textColor="@color/textColor"
                         android:textSize="16sp" />
                 </LinearLayout>
@@ -79,8 +83,10 @@
                             android:id="@+id/bookingCustomerName"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:ellipsize="end"
                             android:fontFamily="@font/lato_bold"
-                            android:text="customer_name"
+                            android:maxLines="1"
+                            android:text=""
                             android:textColor="@color/textColor"
                             android:textSize="16sp" />
 
@@ -88,8 +94,10 @@
                             android:id="@+id/bookingCustomerEmail"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:ellipsize="end"
                             android:fontFamily="@font/lato"
-                            android:text="customer_email"
+                            android:maxLines="1"
+                            android:text=""
                             android:textColor="@color/textColor"
                             android:textSize="14sp" />
                     </LinearLayout>
@@ -116,7 +124,9 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:ellipsize="end"
                             android:fontFamily="@font/lato"
+                            android:maxLines="1"
                             android:text="Contact Number:"
                             android:textColor="@color/textColor"
                             android:textSize="14sp" />
@@ -129,7 +139,9 @@
 
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:ellipsize="end"
                             android:fontFamily="@font/lato"
+                            android:maxLines="1"
                             android:text="From:"
                             android:textColor="@color/textColor"
                             android:textSize="14sp" />
@@ -137,7 +149,9 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:ellipsize="end"
                             android:fontFamily="@font/lato"
+                            android:maxLines="1"
                             android:text="To:"
                             android:textColor="@color/textColor"
                             android:textSize="14sp" />
@@ -149,7 +163,9 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:ellipsize="end"
                             android:fontFamily="@font/lato"
+                            android:maxLines="1"
                             android:text="Date:"
                             android:textColor="@color/textColor"
                             android:textSize="14sp" />
@@ -157,7 +173,9 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:ellipsize="end"
                             android:fontFamily="@font/lato"
+                            android:maxLines="1"
                             android:text="Time:"
                             android:textColor="@color/textColor"
                             android:textSize="14sp" />
@@ -169,7 +187,9 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:ellipsize="end"
                             android:fontFamily="@font/lato"
+                            android:maxLines="1"
                             android:text="Adult:"
                             android:textColor="@color/textColor"
                             android:textSize="14sp" />
@@ -177,7 +197,9 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:ellipsize="end"
                             android:fontFamily="@font/lato"
+                            android:maxLines="1"
                             android:text="Child:"
                             android:textColor="@color/textColor"
                             android:textSize="14sp" />
@@ -189,26 +211,32 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:ellipsize="end"
                             android:fontFamily="@font/lato"
+                            android:maxLines="1"
                             android:text="Transport Name:"
-                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-                            android:textColor="@color/textColor" />
+                            android:textColor="@color/textColor"
+                            android:textSize="14sp" />
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:ellipsize="end"
                             android:fontFamily="@font/lato"
+                            android:maxLines="1"
                             android:text="Driver Name:"
-                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-                            android:textColor="@color/textColor" />
+                            android:textColor="@color/textColor"
+                            android:textSize="14sp" />
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:ellipsize="end"
                             android:fontFamily="@font/lato"
+                            android:maxLines="1"
                             android:text="Plate No.:"
-                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-                            android:textColor="@color/textColor" />
+                            android:textColor="@color/textColor"
+                            android:textSize="14sp" />
 
                         <Space
                             android:layout_width="match_parent"
@@ -217,7 +245,9 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:ellipsize="end"
                             android:fontFamily="@font/lato_black"
+                            android:maxLines="1"
                             android:text="Total:"
                             android:textColor="@color/textColor"
                             android:textSize="16sp" />
@@ -233,8 +263,10 @@
                             android:id="@+id/bookingContactNumber"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:ellipsize="end"
                             android:fontFamily="@font/lato"
-                            android:text="contact_number"
+                            android:maxLines="1"
+                            android:text=""
                             android:textColor="@color/textColor"
                             android:textSize="14sp" />
 
@@ -246,8 +278,10 @@
                             android:id="@+id/bookingLocationFrom"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:ellipsize="end"
                             android:fontFamily="@font/lato"
-                            android:text="location_from"
+                            android:maxLines="1"
+                            android:text=""
                             android:textColor="@color/textColor"
                             android:textSize="14sp" />
 
@@ -255,8 +289,10 @@
                             android:id="@+id/bookingLocationTo"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:ellipsize="end"
                             android:fontFamily="@font/lato"
-                            android:text="location_to"
+                            android:maxLines="1"
+                            android:text=""
                             android:textColor="@color/textColor"
                             android:textSize="14sp" />
 
@@ -268,8 +304,10 @@
                             android:id="@+id/bookingScheduleDate"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:ellipsize="end"
                             android:fontFamily="@font/lato"
-                            android:text="schedule_date"
+                            android:maxLines="1"
+                            android:text=""
                             android:textColor="@color/textColor"
                             android:textSize="14sp" />
 
@@ -277,8 +315,10 @@
                             android:id="@+id/bookingScheduleTime"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:ellipsize="end"
                             android:fontFamily="@font/lato"
-                            android:text="schedule_time"
+                            android:maxLines="1"
+                            android:text=""
                             android:textColor="@color/textColor"
                             android:textSize="14sp" />
 
@@ -290,8 +330,10 @@
                             android:id="@+id/bookingCountAdult"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:ellipsize="end"
                             android:fontFamily="@font/lato"
-                            android:text="adult_count"
+                            android:maxLines="1"
+                            android:text=""
                             android:textColor="@color/textColor"
                             android:textSize="14sp" />
 
@@ -299,8 +341,10 @@
                             android:id="@+id/bookingCountChild"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:ellipsize="end"
                             android:fontFamily="@font/lato"
-                            android:text="child_count"
+                            android:maxLines="1"
+                            android:text=""
                             android:textColor="@color/textColor"
                             android:textSize="14sp" />
 
@@ -312,28 +356,34 @@
                             android:id="@+id/bookingTransportName"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:ellipsize="end"
                             android:fontFamily="@font/lato"
-                            android:text="transport_name"
-                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-                            android:textColor="@color/textColor" />
+                            android:maxLines="1"
+                            android:text=""
+                            android:textColor="@color/textColor"
+                            android:textSize="14sp" />
 
                         <TextView
                             android:id="@+id/bookingDriverName"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:ellipsize="end"
                             android:fontFamily="@font/lato"
-                            android:text="driver_name"
-                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-                            android:textColor="@color/textColor" />
+                            android:maxLines="1"
+                            android:text=""
+                            android:textColor="@color/textColor"
+                            android:textSize="14sp" />
 
                         <TextView
                             android:id="@+id/bookingPlateNumber"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:ellipsize="end"
                             android:fontFamily="@font/lato"
-                            android:text="plate_number"
-                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-                            android:textColor="@color/textColor" />
+                            android:maxLines="1"
+                            android:text=""
+                            android:textColor="@color/textColor"
+                            android:textSize="14sp" />
 
                         <Space
                             android:layout_width="match_parent"
@@ -347,7 +397,9 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:ellipsize="end"
                                 android:fontFamily="@font/lato_bold"
+                                android:maxLines="1"
                                 android:text="@string/peso_sign"
                                 android:textColor="@color/textColor"
                                 android:textSize="16sp" />
@@ -356,7 +408,9 @@
                                 android:id="@+id/price"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:ellipsize="end"
                                 android:fontFamily="@font/lato_bold"
+                                android:maxLines="1"
                                 android:text=""
                                 android:textColor="@color/textColor"
                                 android:textSize="16sp" />
