--- a/app/src/main/res/layout/booking_pending_item_layout.xml
+++ b/app/src/main/res/layout/booking_pending_item_layout.xml
@@ -4,7 +4,6 @@
     android:id="@+id/item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="8dp"
     android:clickable="true"
     android:focusable="true"
     android:foreground="?android:attr/selectableItemBackground">
@@ -12,7 +11,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:orientation="vertical">
 
         <LinearLayout
@@ -35,7 +35,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="8dp"
+                        android:ellipsize="end"
                         android:fontFamily="@font/lato_bold"
+                        android:maxLines="1"
                         android:text="Ref. No.:"
                         android:textColor="#FFFFFF"
                         android:textSize="16sp" />
@@ -48,7 +50,7 @@
                         android:ellipsize="end"
                         android:fontFamily="@font/lato_bold"
                         android:maxLines="1"
-                        android:text="reference_number"
+                        android:text=""
                         android:textColor="#FFFFFF"
                         android:textSize="16sp" />
                 </LinearLayout>
@@ -84,7 +86,7 @@
                             android:ellipsize="end"
                             android:fontFamily="@font/lato_bold"
                             android:maxLines="1"
-                            android:text="customer_name"
+                            android:text=""
                             android:textColor="#FFFFFF"
                             android:textSize="16sp" />
 
@@ -95,7 +97,7 @@
                             android:ellipsize="end"
                             android:fontFamily="@font/lato"
                             android:maxLines="1"
-                            android:text="customer_email"
+                            android:text=""
                             android:textColor="#FFFFFF"
                             android:textSize="14sp" />
 
@@ -106,7 +108,7 @@
                             android:ellipsize="end"
                             android:fontFamily="@font/lato"
                             android:maxLines="1"
-                            android:text="contact_number"
+                            android:text=""
                             android:textColor="#FFFFFF"
                             android:textSize="14sp" />
                     </LinearLayout>
@@ -135,7 +137,9 @@
                     android:id="@+id/bookingTransportName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:ellipsize="end"
                     android:fontFamily="@font/lato"
+                    android:maxLines="1"
                     android:text="transport_name"
                     android:textColor="#FFFFFF"
                     android:textSize="16sp" />
@@ -154,8 +158,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="8dp"
+                        android:ellipsize="end"
                         android:fontFamily="@font/lato_bold"
-                        android:text="location_from"
+                        android:maxLines="1"
+                        android:text=""
                         android:textColor="#FFFFFF"
                         android:textSize="14sp" />
 
@@ -172,8 +178,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
+                        android:ellipsize="end"
                         android:fontFamily="@font/lato_bold"
-                        android:text="location_to"
+                        android:maxLines="1"
+                        android:text=""
                         android:textColor="#FFFFFF"
                         android:textSize="14sp" />
 
@@ -193,8 +201,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="8dp"
+                        android:ellipsize="end"
                         android:fontFamily="@font/lato"
-                        android:text="schedule_date"
+                        android:maxLines="1"
+                        android:text=""
                         android:textColor="#FFFFFF"
                         android:textSize="14sp" />
 
@@ -203,8 +213,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
+                        android:ellipsize="end"
                         android:fontFamily="@font/lato"
-                        android:text="schedule_time"
+                        android:maxLines="1"
+                        android:text=""
                         android:textColor="#FFFFFF"
                         android:textSize="14sp" />
 
@@ -224,8 +236,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="8dp"
+                        android:ellipsize="end"
                         android:fontFamily="@font/lato"
-                        android:text="adult_count"
+                        android:maxLines="1"
+                        android:text=""
                         android:textColor="#FFFFFF"
                         android:textSize="14sp" />
 
@@ -234,48 +248,13 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
+                        android:ellipsize="end"
                         android:fontFamily="@font/lato"
-                        android:text="child_count"
+                        android:maxLines="1"
+                        android:text=""
                         android:textColor="#FFFFFF"
                         android:textSize="14sp" />
 
-                </LinearLayout>
-
-                <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="8dp" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="8dp"
-                        android:fontFamily="@font/lato_bold"
-                        android:text="Price:"
-                        android:textColor="#FFFFFF"
-                        android:textSize="16sp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="8dp"
-                        android:fontFamily="@font/lato_bold"
-                        android:text="@string/peso_sign"
-                        android:textColor="#FFFFFF"
-                        android:textSize="16sp" />
-
-                    <TextView
-                        android:id="@+id/price"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/lato_bold"
-                        android:text=""
-                        android:textColor="#FFFFFF"
-                        android:textSize="16sp" />
                 </LinearLayout>
 
             </LinearLayout>
