--- a/app/src/main/res/layout/dialog_booking_confirmed_item_layout.xml
+++ b/app/src/main/res/layout/dialog_booking_confirmed_item_layout.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="275dp"
     android:layout_height="wrap_content"
     android:background="@drawable/background_dialog_booking_generate_qr"
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="16dp">
+        android:layout_gravity="center"
+        android:layout_margin="8dp"
+        android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
@@ -24,7 +25,7 @@
                 android:layout_height="2dp"
                 android:layout_gravity="center"
                 android:layout_weight="5"
-                android:background="#1F000000" />
+                android:background="#80FFFFFF" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -33,36 +34,26 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 android:fontFamily="@font/lato_bold"
-                android:text="Generate QR"
+                android:text="Booking QR"
                 android:textAlignment="center"
-                android:textSize="16sp"
-                android:textColor="@color/textColor" />
+                android:textColor="#FFFFFF"
+                android:textSize="16sp" />
 
             <LinearLayout
                 android:layout_width="75dp"
                 android:layout_height="2dp"
                 android:layout_gravity="center"
                 android:layout_weight="5"
-                android:background="#1F000000" />
-        </LinearLayout>
+                android:background="#80FFFFFF" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="Present this QR code to your driver or the\nvan dispatcher after payment to finalize\nyour booking."
-            android:fontFamily="@font/lato"
-            android:textColor="@color/textColor"
-            android:layout_gravity="center"
-            android:textSize="14sp"
-            android:layout_height="wrap_content"/>
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_gravity="center"
-            android:padding="8dp"
-            android:background="@drawable/background_qr"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginTop="8dp"
+            android:background="@drawable/background_qr"
             android:orientation="vertical">
 
             <ImageView
@@ -72,5 +63,16 @@
                 android:layout_gravity="center" />
 
         </LinearLayout>
+
+        <TextView
+            android:layout_width="225dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="8dp"
+            android:fontFamily="@font/lato"
+            android:text="Present this QR code to your driver or the van dispatcher after payment to finalize your booking."
+            android:textColor="#FFFFFF"
+            android:textSize="14sp" />
+
     </LinearLayout>
 </LinearLayout>
