--- a/app/src/main/res/layout/dialog_scan_layout.xml
+++ b/app/src/main/res/layout/dialog_scan_layout.xml
@@ -6,7 +6,6 @@
     android:padding="16dp">
 
     <com.google.android.material.card.MaterialCardView
-        android:id="@+id/bookingCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardBackgroundColor="#FFFFFF"
@@ -46,7 +45,7 @@
                         android:ellipsize="end"
                         android:fontFamily="@font/lato_bold"
                         android:maxLines="1"
-                        android:text="reference_number"
+                        android:text=""
                         android:textColor="@color/textColor"
                         android:textSize="16sp" />
                 </LinearLayout>
@@ -81,7 +80,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lato_bold"
-                            android:text="customer_name"
+                            android:text=""
                             android:textColor="@color/textColor"
                             android:textSize="16sp" />
 
@@ -90,7 +89,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lato"
-                            android:text="customer_email"
+                            android:text=""
                             android:textColor="@color/textColor"
                             android:textSize="14sp" />
                     </LinearLayout>
@@ -124,7 +123,7 @@
 
                         <Space
                             android:layout_width="match_parent"
-                            android:layout_height="6dp" />
+                            android:layout_height="wrap_content" />
 
                         <TextView
 
@@ -192,7 +191,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lato"
                             android:text="Transport Name:"
-                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+                            android:textSize="14sp"
                             android:textColor="@color/textColor" />
 
                         <TextView
@@ -200,7 +199,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lato"
                             android:text="Driver Name:"
-                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+                            android:textSize="14sp"
                             android:textColor="@color/textColor" />
 
                         <TextView
@@ -208,7 +207,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lato"
                             android:text="Plate No.:"
-                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+                            android:textSize="14sp"
                             android:textColor="@color/textColor" />
 
                         <Space
@@ -235,7 +234,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lato"
-                            android:text="contact_number"
+                            android:text=""
                             android:textColor="@color/textColor"
                             android:textSize="14sp" />
 
@@ -248,7 +247,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lato"
-                            android:text="location_from"
+                            android:text=""
                             android:textColor="@color/textColor"
                             android:textSize="14sp" />
 
@@ -257,7 +256,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lato"
-                            android:text="location_to"
+                            android:text=""
                             android:textColor="@color/textColor"
                             android:textSize="14sp" />
 
@@ -270,7 +269,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lato"
-                            android:text="schedule_date"
+                            android:text=""
                             android:textColor="@color/textColor"
                             android:textSize="14sp" />
 
@@ -279,7 +278,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lato"
-                            android:text="schedule_time"
+                            android:text=""
                             android:textColor="@color/textColor"
                             android:textSize="14sp" />
 
@@ -292,7 +291,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lato"
-                            android:text="adult_count"
+                            android:text=""
                             android:textColor="@color/textColor"
                             android:textSize="14sp" />
 
@@ -301,7 +300,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lato"
-                            android:text="child_count"
+                            android:text=""
                             android:textColor="@color/textColor"
                             android:textSize="14sp" />
 
@@ -314,8 +313,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lato"
-                            android:text="transport_name"
-                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+                            android:text=""
+                            android:textSize="14sp"
                             android:textColor="@color/textColor" />
 
                         <TextView
@@ -323,8 +322,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lato"
-                            android:text="driver_name"
-                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+                            android:text=""
+                            android:textSize="14sp"
                             android:textColor="@color/textColor" />
 
                         <TextView
@@ -332,8 +331,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lato"
-                            android:text="plate_number"
-                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+                            android:text=""
+                            android:textSize="14sp"
                             android:textColor="@color/textColor" />
 
                         <Space
@@ -371,17 +370,8 @@
                     android:layout_marginTop="16dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:gravity="end"
                     android:orientation="horizontal">
-
-                    <com.google.android.material.button.MaterialButton
-                        android:id="@+id/btnCancelBooking"
-                        style="?attr/materialButtonOutlinedStyle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="8dp"
-                        android:fontFamily="@font/lato_black"
-                        android:text="CANCEL"
-                        android:textColor="@color/colorPrimary" />
 
                     <com.google.android.material.button.MaterialButton
                         android:id="@+id/btnConfirmBooking"
@@ -392,6 +382,7 @@
                         android:text="CONFIRM"
                         android:textColor="@color/white"
                         app:backgroundTint="@color/colorPrimary" />
+
                 </LinearLayout>
 
             </LinearLayout>
