--- a/app/src/main/res/layout/fragment_bookings_confirmed_transport.xml
+++ b/app/src/main/res/layout/fragment_bookings_confirmed_transport.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_body"
+    android:background="#FFFFFF"
     tools:context=".ui.fragments.transport.bookings.BookingsConfirmedTransportFragment">
 
     <RelativeLayout
@@ -18,7 +18,7 @@
             android:layout_centerInParent="true"
             android:drawableTop="@drawable/ic_icon_status_none"
             android:fontFamily="@font/lato"
-            android:text="No bookings found."
+            android:text="No confirmed bookings found."
             android:textColor="@color/textColor"
             android:textSize="16sp"
             android:visibility="visible" />
