--- a/app/src/main/res/layout/fragment_dashboard_transport_admin.xml
+++ b/app/src/main/res/layout/fragment_dashboard_transport_admin.xml
@@ -1,24 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_body"
-    tools:context=".ui.fragments.admin.DashboardAdminFragment">
+    android:background="#FFFFFF"
+    tools:context=".ui.fragments.transport.DashboardTransportAdminFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:orientation="vertical">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="32sp"
             android:layout_gravity="center"
-            android:text="DASHBOARD"/>
+            android:drawableTop="@drawable/ic_build"
+            android:fontFamily="@font/lato_black"
+            android:text="DASHBOARD"
+            android:textColor="@color/textColor"
+            android:textSize="32sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:fontFamily="@font/lato_black"
+            android:text="UNDER CONSTRUCTION"
+            android:textColor="@color/textColor"
+            android:textSize="16sp" />
 
     </LinearLayout>
 
-</ScrollView>
+</RelativeLayout>
