--- a/app/src/main/res/layout/fragment_rent.xml
+++ b/app/src/main/res/layout/fragment_rent.xml
@@ -11,26 +11,18 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="16dp"
         android:layout_gravity="center"
-        android:padding="16dp"
+        android:layout_marginBottom="8dp"
         android:gravity="center"
         android:orientation="horizontal"
         android:weightSum="12">
 
-        <LinearLayout
-            android:layout_width="75dp"
-            android:layout_height="2dp"
-            android:layout_gravity="center"
-            android:layout_weight="5"
-            android:background="#1F000000" />
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:fontFamily="@font/lato_bold"
+            android:fontFamily="@font/lato_black"
             android:text="Rent-a-Van"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
@@ -40,7 +32,7 @@
             android:layout_width="75dp"
             android:layout_height="2dp"
             android:layout_gravity="center"
-            android:layout_weight="5"
+            android:layout_weight="10"
             android:background="#1F000000" />
     </LinearLayout>
 
