--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,16 +4,16 @@
     <item
         android:id="@+id/nav_book"
         android:icon="@drawable/ic_menu_book"
-        android:title="@string/title_book" />
+        android:title="@string/label_book" />
 
     <item
         android:id="@+id/nav_rent"
         android:icon="@drawable/ic_menu_rent"
-        android:title="@string/title_rent" />
+        android:title="@string/label_rent" />
 
     <item
         android:id="@+id/nav_schedule"
         android:icon="@drawable/ic_menu_schedule"
-        android:title="@string/title_schedule" />
+        android:title="@string/label_schedule" />
 
 </menu>
