--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -6,6 +6,6 @@
         android:id="@+id/btnChat"
         app:showAsAction="always"
         android:icon="@drawable/ic_btn_chat"
-        android:title="@string/title_chat" />
+        android:title="@string/label_chat" />
 
 </menu>
