--- a/app/src/main/res/menu/toolbar_menu_profile.xml
+++ b/app/src/main/res/menu/toolbar_menu_profile.xml
@@ -6,6 +6,6 @@
         android:id="@+id/btnEdit"
         app:showAsAction="always"
         android:icon="@drawable/ic_btn_edit"
-        android:title="@string/title_edit" />
+        android:title="@string/label_edit" />
 
 </menu>
